--- a/package.json
+++ b/package.json
@@ -1,8 +1,17 @@
 {
-  "name": "mysanthropy",
+  "name": "react-express-boilerplate",
   "version": "1.0.0",
-  "description": "Scifi Short Stories",
+  "description": "Boilerplate for React, Express, Webpack, Babel",
   "main": "/App/App.js",
+  "keywords": [
+    "scifi",
+    "fiction",
+    "shorts stories",
+    "forum",
+    "futarism",
+    "community",
+    "space"
+  ],
   "scripts": {
     "start": "webpack -w --mode development & nodemon Backend/Server/Server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,6 +19,7 @@
   "author": "yosef herskovitz",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
     "babel-loader": "^8.1.0",
     "express": "^4.17.1",
     "react": "^16.13.1",
@@ -21,7 +31,8 @@
     "@babel/cli": "^7.11.6",
     "@babel/core": "^7.11.6",
     "@babel/preset-env": "^7.11.5",
-    "@babel/preset-react": "^7.10.4"
+    "@babel/preset-react": "^7.10.4",
+    "css-loader": "^5.0.0"
   },
   "presets": [
     "@babel/preset-react"
