--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@beyonk/google-fonts-webpack-plugin": "^1.5.0",
     "@material-ui/core": "^4.11.0",
     "babel-loader": "^8.1.0",
+    "connect-history-api-fallback": "^1.6.0",
     "express": "^4.17.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
