--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
     "babel-loader": "^8.1.0",
     "connect-history-api-fallback": "^1.6.0",
     "express": "^4.17.1",
+    "pg": "^8.4.1",
+    "pg-hstore": "^2.3.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
+    "sequelize": "^6.3.5",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12"
   },
