--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   ],
   "scripts": {
     "start": "webpack -w --mode development & nodemon Backend/Server/Server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "seed": "node Backend/Database/dbSeed.js"
   },
   "author": "yosef herskovitz",
   "license": "ISC",
