--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@beyonk/google-fonts-webpack-plugin": "^1.5.0",
     "@material-ui/core": "^4.11.0",
+    "axios": "^0.20.0",
     "babel-loader": "^8.1.0",
     "connect-history-api-fallback": "^1.6.0",
     "express": "^4.17.1",
@@ -29,7 +30,10 @@
     "pg-hstore": "^2.3.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "sequelize": "^6.3.5",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12"
@@ -39,6 +43,7 @@
     "@babel/core": "^7.11.6",
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
+    "babel-regenerator-runtime": "^6.5.0",
     "css-loader": "^5.0.0",
     "file-loader": "^6.1.1",
     "image-webpack-loader": "^7.0.1",
