--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^0.20.0",
     "babel-loader": "^8.1.0",
     "connect-history-api-fallback": "^1.6.0",
+    "crypto-js": "^4.0.0",
     "express": "^4.17.1",
     "pg": "^8.4.1",
     "pg-hstore": "^2.3.3",
