--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@material-ui/core": "^4.11.0",
     "axios": "^0.20.0",
     "babel-loader": "^8.1.0",
+    "body-parser": "^1.19.0",
     "connect-history-api-fallback": "^1.6.0",
     "crypto-js": "^4.0.0",
     "express": "^4.17.1",
