--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "babel-loader": "^8.1.0",
     "body-parser": "^1.19.0",
     "connect-history-api-fallback": "^1.6.0",
+    "connect-session-sequelize": "^7.0.4",
     "crypto-js": "^4.0.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "pg": "^8.4.2",
     "pg-hstore": "^2.3.3",
     "react": "^16.13.1",
