--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "license": "ISC",
   "dependencies": {
     "@beyonk/google-fonts-webpack-plugin": "^1.5.0",
+    "@draft-js-plugins/editor": "^4.0.0",
+    "@draft-js-plugins/static-toolbar": "^4.0.0",
     "@material-ui/core": "^4.11.0",
     "axios": "^0.20.0",
     "babel-loader": "^8.1.0",
@@ -29,6 +31,7 @@
     "connect-history-api-fallback": "^1.6.0",
     "connect-session-sequelize": "^7.0.4",
     "crypto-js": "^4.0.0",
+    "draft-js": "^0.11.7",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "pg": "^8.4.2",
