--- a/package.json
+++ b/package.json
@@ -25,14 +25,16 @@
     "@ckeditor/ckeditor5-build-classic": "^25.0.0",
     "@ckeditor/ckeditor5-react": "^3.0.1",
     "@material-ui/core": "^4.11.0",
-    "axios": "^0.20.0",
+    "axios": "^0.21.1",
     "babel-loader": "^8.1.0",
     "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
     "connect-history-api-fallback": "^1.6.0",
     "connect-session-sequelize": "^7.0.4",
     "crypto-js": "^4.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "helmet": "^4.4.1",
     "pg": "^8.4.2",
     "pg-hstore": "^2.3.3",
     "react": "^16.13.1",
